[project]
name = "vllm-windows-rtx5090-release"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch==2.11.0+cu130",
    "torchaudio==2.11.0+cu130",
    "torchvision==0.26.0+cu130",
    "triton-windows==3.6.0.post26",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true